# obs-streamelements-core

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  FindAngelScript.cmake  FindCEF.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  MacOSXBundleInfo.plist.in  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  RELEASE_NOTES.header.md  RELEASE_NOTES.md  appveyor.yml  browser-app.cpp  browser-app.hpp  browser-client.cpp  browser-client.hpp  cef-headers.hpp  cmake_install.cmake  macutil.mm  obs-browser-plugin.cpp  obs-browser-source.cpp  obs-browser-source.hpp  obs-streamelements-core-plugin.cpp  obs-streamelements-core-streamelements-restore-script-host.vcxproj  obs-streamelements-core-streamelements-restore-script-host.vcxproj.filters  obs-streamelements-core.sln  obs-streamelements-core.vcxproj  obs-streamelements-core.vcxproj.filters  qrc_streamelements.cpp
.circleci/: config.yml
.github/workflows/: build-obs-streamelements-installer.yml  build-obs-streamelements-uninstaller.yml  build.yml  claude-code-review.yml  claude.yml  codeql-analysis.yml  tests.yml
CI/gcs/: package-lock.json  package.json  upload.js
CI/obs-streamelements-installer/: README.md  Version.generated.hpp  build.bat  common.nsh  debug.bat  macos_conclusion.html  macos_distribution.xml  macos_license.html  macos_readme.html  macos_welcome.html  main.nsi  science.nsh  template.macos.manifest  template.manifest  version.generated.nsh  win_obs_required.nsddef
CI/obs-streamelements-installer/.github/workflows/: build.yml
CI/obs-streamelements-installer/nsis/Contrib/Aero/: Aero.cpp  Aero.rc  Aero.sln  Aero.vcxproj.filters
CI/obs-streamelements-installer/nsis/Contrib/LockedList3/: CRTReplica.cpp  LockedList.cpp  LockedList.h  LockedList.vcxproj  LockedList.vcxproj.filters  SystemEnum.cpp  resource.h
CI/obs-streamelements-installer/nsis/Docs/Aero/: Readme.txt
CI/obs-streamelements-installer/nsis/Examples/Aero/: ClassicUI.nsi  ModernUI.nsi
CI/obs-streamelements-installer/nsis/Examples/LockedList/: LockedListAutoCloseSilent.nsi  LockedListAutoNext.nsi  LockedListClasses.nsi  LockedListCustom.nsi  LockedListEnumProcesses.nsi  LockedListFindProcess.nsi  LockedListFolder.nsi  LockedListIgnoreBtn.nsi
CI/obs-streamelements-installer/resources/: license.txt
CI/obs-streamelements-uninstaller/: README.md  build.bat  common.nsh  main.nsi  test.bat
CI/obs-streamelements-uninstaller/.github/workflows/: build.yml
CI/obs-streamelements-uninstaller/nsis/Contrib/Aero/: Aero.h  Aero.vcxproj  resource.h
CI/obs-streamelements-uninstaller/nsis/Examples/: nsWeb - Classic UI.nsi  nsWeb - Modern UI.nsi
CI/obs-streamelements-uninstaller/resources/: farewell.html
RelWithDebInfo/: obs-streamelements-core-streamelements-restore-script-host.exp  obs-streamelements-core-streamelements-restore-script-host.lib  obs-streamelements-core.exp  obs-streamelements-core.lib
data/: error.html
data/locale/: en-US.ini
obs-browser-page_autogen/: mocs_compilation.cpp
obs-browser_autogen/: mocs_compilation.cpp
obs-browser_autogen/include_RelWithDebInfo/2M4IF6KQHC/: moc_browser-panel-internal.cpp  moc_browser-panel.cpp
obs-browser_autogen/include_RelWithDebInfo/QIUOOOG5GC/: moc_StreamElementsBrowserWidget.cpp  moc_StreamElementsCefClient.cpp  moc_StreamElementsPleaseWaitWindow.cpp
obs-streamelements-core-streamelements-restore-script-host.dir/RelWithDebInfo/: obs-streamelements-core-streamelements-restore-script-host.exe.recipe
obs-streamelements-core.dir/RelWithDebInfo/: obs-streamelements-core.dll.recipe
obs-streamelements-core_autogen/: mocs_compilation.cpp
obs-streamelements-core_autogen/include_RelWithDebInfo/: ui_StreamElementsNetworkDialog.h  ui_StreamElementsProgressDialog.h  ui_StreamElementsReportIssueDialog.h  ui_streamelementspleasewaitwindow.h
obs-streamelements-core_autogen/include_RelWithDebInfo/QIUOOOG5GC/: moc_StreamElementsBrowserWidget.cpp  moc_StreamElementsMenuManager.cpp  moc_StreamElementsNativeOBSControlsManager.cpp  moc_StreamElementsNetworkDialog.cpp  moc_StreamElementsProgressDialog.cpp  moc_StreamElementsReportIssueDialog.cpp
panel/: browser-panel.cpp  browser-panel.hpp
streamelements/: SETrace.cpp  SETrace.hpp  StreamElementsAnalyticsEventsManager.cpp  StreamElementsAnalyticsEventsManager.hpp  StreamElementsApiMessageHandler.cpp  StreamElementsApiMessageHandler.hpp  StreamElementsAsyncTaskQueue.cpp  StreamElementsAsyncTaskQueue.hpp  StreamElementsAudioComposition.cpp  StreamElementsAudioComposition.hpp  StreamElementsAudioCompositionManager.cpp  StreamElementsAudioCompositionManager.hpp  StreamElementsBackupManager.cpp  StreamElementsBackupManager.hpp  StreamElementsBandwidthTestClient.cpp  StreamElementsBandwidthTestClient.hpp  StreamElementsBandwidthTestManager.cpp  StreamElementsBandwidthTestManager.hpp  StreamElementsBrowserDialog.cpp  StreamElementsBrowserDialog.hpp  StreamElementsBrowserSourceApiMessageHandler.cpp  StreamElementsBrowserWidget.cpp  StreamElementsBrowserWidget.hpp  StreamElementsBrowserWidgetManager.cpp  StreamElementsBrowserWidgetManager.hpp  StreamElementsCefClient.cpp  StreamElementsCefClient.hpp  StreamElementsCleanupManager.cpp  StreamElementsCleanupManager.hpp  StreamElementsComposition.cpp  StreamElementsComposition.hpp  StreamElementsCompositionManager.cpp  StreamElementsCompositionManager.hpp  StreamElementsConfig.cpp  StreamElementsConfig.hpp  StreamElementsControllerServer.cpp  StreamElementsControllerServer.hpp  StreamElementsCookieManager.cpp  StreamElementsCrashHandler.cpp  StreamElementsCrashHandler.hpp  (+83 more)
streamelements/html/: error.html
streamelements/restore-script-host/: ScriptEngine.cpp  ScriptEngine.hpp  main.cpp  main.hpp  main.rc
streamelements/updater/: confirmpendingupdatedialog.cpp  confirmpendingupdatedialog.hpp  confirmpendingupdatedialog.ui  networkdialog.cpp  networkdialog.hpp  networkdialog.ui  obs-streamelements-config.h  updater.cpp  updater.hpp
tests/: CMakeLists.txt  source_paths.hpp.in  test_source_invariants.cpp  test_video_encoder_template_demo.cpp
(+25 files in other folders)
